--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,22 @@ html, body{
 	width:100%;
 
 }
+a:link{
+	color: white;
+	text-decoration: none;
+}
+a:active {
+    color: white;
+		text-decoration: none;
+}
+a:hover {
+    color: white;
+		text-decoration: none;
+}
+a:visited{
+	color: white;
+	text-decoration: none;
+}
 #first-letter{
 	font-size:4em;
 }
@@ -52,6 +68,7 @@ background-position: 10% 22%;
 	letter-spacing: -2px;
 	font-family: 'Poppins', sans-serif;
 	font-size: 4em;
+
 }
 
 #menu-button{
