--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,8 @@ background-position: 10% 22%;
 	font-family: 'Poppins', sans-serif;
 	font-size: 5em;
 
+	    justify-content: center;
+	    display: flex;
 }
 
 #menu-button{
@@ -243,7 +245,7 @@ width:100%;
  z-index: 1;
  align-items: center;
  justify-content: center;
- padding-bottom: 100px;
+ padding-top: 100px;
 
 }
 .photo-rowgrid{
@@ -275,6 +277,7 @@ width:100%;
 	margin:0;
  	display:flex;
  	justify-content: center;
+	padding-bottom: 0px;
 
 }
 .social_row{
@@ -481,7 +484,7 @@ font-family: 'Poppins', sans-serif;
 			 z-index: 1;
 			 align-items: center;
 			 justify-content: center;
-			 padding-bottom: 100px;
+			 padding-top: 100px;
 
 			}
 			.site-title{
@@ -671,4 +674,27 @@ font-style: italic;
 font-size:1em;
 
 
+}
+/* The typing effect */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: orange; }
+}
+
+.site-title {
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-left: .15em solid orange;
+	  border-right: .15em solid orange;/* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin:auto; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: .15em; /* Adjust as needed */
+  animation:
+    typing 3.5s steps(40, end),
+    blink-caret .75s step-end infinite;
 }
