--- a/styles.css
+++ b/styles.css
@@ -462,6 +462,14 @@ font-family: 'Poppins', sans-serif;
   and (min-device-width: 610px)
   and (max-device-width: 1024px)
   and (-webkit-min-device-pixel-ratio: 1) {
+		html, body{
+			padding:0;
+			margin:0;
+			width:100%;
+			display: flex;
+			    flex-direction: column;
+					background-color: black;
+		}
 		.cell{
 			 width: calc(100% / 2);
 		   height:600px;
