--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,14 @@ html, body{
 	padding:0;
 	margin:0;
 	width:100%;
+
 	display: flex;
 	    flex-direction: column;
+}
+html footer{
+	padding-bottom: 0;
+
+
 }
 a:link{
 	color: white;
@@ -48,12 +54,14 @@ a:visited{
 .top-container3{
 	display:flex;
 	width:100%;
+	height:200px;
 	height:300px;
 	justify-content: flex-end;
 	background-image: url(./photos/space-man.png);
 	background-position: center;
 		background-position:;
 background-position: 10% 22%;
+    height: 700px;
 }
 .top-container2{
 	display:flex;
@@ -109,7 +117,9 @@ background-position: 10% 22%;
 }
 
 #menu-button span {
-	filter: invert(100%);
+
+	border: .5px solid black;
+filter: invert(100%);
   display: block;
   position: absolute;
   height: 5px;
@@ -507,6 +517,7 @@ font-family: 'Poppins', sans-serif;
 	 display:flex;
 	 justify-content: center;
 	   font-family: 'Poppins', sans-serif;
+		 z-index: 3;
  }
  .header h1{
 	 justify-content: center;
@@ -515,6 +526,7 @@ font-family: 'Poppins', sans-serif;
  }
  form{
 	 margin-left: 120px;
+	 padding-top : 100px;
  }
  .wrapper{
 	 background:#fff;
@@ -533,11 +545,16 @@ font-family: 'Poppins', sans-serif;
 }
 form{
 	padding-bottom: 100px;
+
 }
 .contact-form-box{
 	width:100%;
 	margin:10px auto;
 	padding:0;
+	width: 960px;
+position: relative;
+margin:0 auto;
+line-height: 1.4em;
  }
 #ContactForm1_contact-form-name, #ContactForm1_contact-form-email{
 	width: 80%;
@@ -706,4 +723,67 @@ font-size:1em;
   animation:
     typing 3.5s steps(40, end),
     blink-caret .75s step-end infinite;
+}
+
+/*stars*/
+@keyframes particleAnimation
+{
+    from {
+        left: -100px;
+    }
+    to {
+        left: calc( 100% + 100px );
+    }
+}
+
+
+
+.p{
+  position:fixed;
+  left:0px;
+  top:50px;
+  width:1px;
+  height:1px;
+  background-color:white;
+  position:fixed;
+  animation-name:particleAnimation;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+.p::before{
+  position:absolute;
+  display:block;
+  content:"";
+  width:100px;
+  right:1px;
+  top:0px;
+  height:1px;
+  background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(255,255,255,0.4) 100%);
+}
+.p-1{
+  animation-duration:10s;
+}
+.p-2{
+  animation-duration:5s;
+  top:60%;
+}
+.p-3{
+  animation-duration:20s;
+  top:90%;
+}
+.more-arrow2{
+	display: flex;
+	color:white;
+	font-stretch:semi-expanded;
+			justify-content: center;
+			-moz-transform: scale(1, -1);
+-webkit-transform: scale(1, -1);
+-o-transform: scale(1, -1);
+-ms-transform: scale(1, -1);
+transform: scale(1, -1);
+	position:fixed;
+		width:100%;
+			/*  margin-top: 198px;*/
+				padding-top: 0px;
+	z-index:2 ;
 }
