--- a/styles.css
+++ b/styles.css
@@ -698,8 +698,32 @@ blockquote{
 	justify-content: center;
 font-style: italic;
 font-size:1em;
+width:80%;
 
 
+}
+
+blockquote h3 {
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid orange; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: .15em; /* Adjust as needed */
+  animation:
+    typing 3.5s steps(40, end),
+    blink-caret .75s step-end infinite;
+}
+
+/* The typing effect */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: orange; }
 }
 /* The typing effect */
 @keyframes typing {
@@ -769,6 +793,10 @@ font-size:1em;
 }
 .p-3{
   animation-duration:20s;
+  top:90%;
+}
+.p-4{
+  animation-duration:15s;
   top:90%;
 }
 .more-arrow2{
