--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,12 @@ html, body{
 	padding:0;
 	margin:0;
 	width:100%;
-
+	display: -webkit-box;      
+	display: -moz-box;         
+	display: -ms-flexbox;      
+	display: -webkit-flex;
 	display: flex;
-	    flex-direction: column;
+	flex-direction: column;
 }
 html footer{
 	padding-bottom: 0;
