--- a/styles.css
+++ b/styles.css
@@ -201,6 +201,10 @@ filter: invert(100%);
 	width:100%;
 	background-color: white;
 	height:20%;
+	display: -webkit-box;      
+	display: -moz-box;         
+	display: -ms-flexbox;      
+	display: -webkit-flex;
 	display:flex;
 	justify-content: center;
     margin-top: 300px;
